[CSS z-index] fixed menu dropdown z-index issue

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,3 +17,12 @@ body {
 .session {
   margin-top: 5px;
 }
+
+.post_image {
+  float:left;
+  margin-right: 10px;
+}
+
+.post_text {
+}
+
