--- a/app/assets/stylesheets/jquery.dualSlider.0.3.css
+++ b/app/assets/stylesheets/jquery.dualSlider.0.3.css
@@ -22,7 +22,7 @@
     height: 340px;
     float:left;
     position:relative;
-    z-index:1;
+    z-index:0;
 }
 
 .carousel .backgrounds .item_1{
@@ -45,7 +45,7 @@
     top:0;
     height: 340px;
     width: 275px;
-    z-index:10;
+    z-index:2;
 }
 
 .carousel .panel .paging{
